// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic flow Gateway updates when updating schema in registry 1`] = `
Object {
  "foo": "BAZ",
}
`;

exports[`Basic flow Send wrong schema 1`] = `
{
  "errors": [
    {
      "message": "Unknown type: \\"HLFoo\\".",
      "exception": {
        "code": "INTERNAL_SERVER_ERROR"
      }
    }
  ],
  "data": {
    "result": null
  }
}
`;

exports[`Basic flow Setup schema 1`] = `
Object {
  "foo": "BAR",
}
`;
